--- a/wiki/de/TechDraw_Workbench.html
+++ b/wiki/de/TechDraw_Workbench.html
@@ -157,9 +157,7 @@
 <h3><span id="Ma.C3.9Fe_formatieren.2Forganisieren"></span><span class="mw-headline" id="Ma&szlig;e_formatieren/organisieren">Ma&szlig;e formatieren/organisieren</span></h3>
 <ul><li><span id="TechDraw_ExtensionCreateChainDimensionGroup"><span typeof="mw:File"><a href="../index.php?title=TechDraw_ExtensionCreateHorizChainDimension.svg&amp;filetimestamp=20240707201554&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ExtensionCreateHorizChainDimension.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../de/TechDraw_ExtensionCreateHorizChainDimension.html" title="TechDraw ExtensionCreateHorizChainDimension/de">Horizontale Ma&szlig;kette</a>: Erstellt ein Abfolge horizontal fluchtender Ma&szlig;e.</span></li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=TechDraw_ExtensionCreateVertChainDimension.svg&amp;filetimestamp=20240707202153&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ExtensionCreateVertChainDimension.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../de/TechDraw_ExtensionCreateVertChainDimension.html" title="TechDraw ExtensionCreateVertChainDimension/de">Vertikale Ma&szlig;kette</a>: Erstellt ein Abfolge vertikal fluchtender Ma&szlig;e.</li></ul>
-<div class="mw-translate-fuzzy">
-<dl><dd><ul><li><span typeof="mw:File"><a href="../index.php?title=TechDraw_ExtensionCreateObliqueChainDimension.svg&amp;filetimestamp=20240707201902&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ExtensionCreateObliqueChainDimension.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../de/TechDraw_ExtensionCreateObliqueChainDimension.html" title="TechDraw ExtensionCreateObliqueChainDimension/de">Schr&auml;ge Ma&szlig;kette erstellen</a>: Erstellt ein Abfolge schr&auml;ger fluchtender Ma&szlig;e.</li></ul></dd></dl>
-</div>
+<ul><li><span typeof="mw:File"><a href="../index.php?title=TechDraw_ExtensionCreateObliqueChainDimension.svg&amp;filetimestamp=20240707201902&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ExtensionCreateObliqueChainDimension.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../de/TechDraw_ExtensionCreateObliqueChainDimension.html" title="TechDraw ExtensionCreateObliqueChainDimension/de">Schr&auml;ge Ma&szlig;kette</a>: Erstellt ein Abfolge schr&auml;ger fluchtender Ma&szlig;e.</li></ul>
 <div class="mw-translate-fuzzy">
 <dl><dd><ul><li><span id="TechDraw_ExtensionCreateCoordDimensionGroup"> <span typeof="mw:File"><a href="../index.php?title=TechDraw_ExtensionCreateHorizCoordDimension.svg&amp;filetimestamp=20240707201729&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ExtensionCreateHorizCoordDimension.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../de/TechDraw_ExtensionCreateHorizCoordDimension.html" title="TechDraw ExtensionCreateHorizCoordDimension/de">Horizontale Koordinatenma&szlig;e erstellen</a>: Erstellt eine horizontale Stufenbema&szlig;ung, d.h. mehrere horizontale Ma&szlig;e, die untereinander den gleichen Abstand aufweisen und die von derselben Grundlinie starten.</span></li></ul></dd></dl>
 </div>
@@ -333,13 +331,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260111190959
+Cached time: 20260111191108
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.306 seconds
-Real time usage: 0.905 seconds
-Preprocessor visited node count: 879/1000000
+CPU time usage: 0.283 seconds
+Real time usage: 0.455 seconds
+Preprocessor visited node count: 878/1000000
 Post&#8208;expand include size: 27425/2097152 bytes
 Template argument size: 10242/2097152 bytes
 Highest expansion depth: 5/100
@@ -349,18 +347,18 @@ Unstrip post&#8208;expand size: 4458/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   70.099      1 -total
- 33.55%   23.518      1 Template:TechDraw_Tools_navi/de
- 23.53%   16.495      2 Template:Navigation_menu_2
- 13.97%    9.790      2 Template:Docnav/de
- 12.33%    8.644     25 Template:Version/de
- 11.27%    7.902      5 Template:VersionPlus/de
-  5.87%    4.118      1 Template:KEY
-  5.84%    4.094      1 Template:Userdocnavi/de
-  2.82%    1.977      1 Template:TOCright
+100.00%   30.297      1 -total
+ 25.02%    7.579      5 Template:VersionPlus/de
+ 23.70%    7.179      1 Template:TechDraw_Tools_navi/de
+ 12.82%    3.884      2 Template:Navigation_menu_2
+ 11.06%    3.350      2 Template:Docnav/de
+  9.99%    3.027     25 Template:Version/de
+  7.12%    2.157      1 Template:KEY
+  6.99%    2.118      1 Template:Userdocnavi/de
+  6.85%    2.076      1 Template:TOCright
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:83899-0!canonical and timestamp 20260111190958 and revision id 1735795. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:83899-0!canonical and timestamp 20260111191108 and revision id 1735801. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
