--- a/wiki/bg/User_hub.html
+++ b/wiki/bg/User_hub.html
@@ -90,9 +90,7 @@
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Workbench_Spreadsheet.svg&amp;filetimestamp=20240527155805&amp;.html" class="mw-file-description"><img src="../File/Workbench_Spreadsheet.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Spreadsheet_Workbench.html" title="Spreadsheet Workbench">Spreadsheet Workbench</a> &#1079;&#1072; &#1089;&#1098;&#1079;&#1076;&#1072;&#1074;&#1072;&#1085;&#1077; &#1080; &#1084;&#1072;&#1085;&#1080;&#1087;&#1091;&#1083;&#1080;&#1088;&#1072;&#1085;&#1077; &#1085;&#1072; &#1076;&#1072;&#1085;&#1085;&#1080; &#1086;&#1090; &#1077;&#1083;&#1077;&#1082;&#1090;&#1088;&#1086;&#1085;&#1085;&#1080; &#1090;&#1072;&#1073;&#1083;&#1080;&#1094;&#1080;.</li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Workbench_Surface.svg&amp;filetimestamp=20210130230011&amp;.html" class="mw-file-description"><img src="../File/Workbench_Surface.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Surface_Workbench.html" title="Surface Workbench">Surface Workbench</a> &#1087;&#1088;&#1077;&#1076;&#1086;&#1089;&#1090;&#1072;&#1074;&#1103; &#1080;&#1085;&#1089;&#1090;&#1088;&#1091;&#1084;&#1077;&#1085;&#1090;&#1080; &#1079;&#1072; &#1089;&#1098;&#1079;&#1076;&#1072;&#1074;&#1072;&#1085;&#1077; &#1080; &#1084;&#1086;&#1076;&#1080;&#1092;&#1080;&#1094;&#1080;&#1088;&#1072;&#1085;&#1077; &#1085;&#1072; &#1087;&#1086;&#1074;&#1098;&#1088;&#1093;&#1085;&#1086;&#1089;&#1090;&#1080;. &#1055;&#1086;&#1076;&#1086;&#1073;&#1085;&#1072; &#1085;&#1072; &#1088;&#1072;&#1073;&#1086;&#1090;&#1085;&#1072;&#1090;&#1072; &#1084;&#1072;&#1089;&#1072; <a href="../Part_Builder.html" title="Part Builder">Part Builder</a> &#1051;&#1080;&#1094;&#1077; &#1086;&#1090; &#1088;&#1098;&#1073;&#1086;&#1074;&#1077;.</li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Workbench_TechDraw.svg&amp;filetimestamp=20240713144548&amp;.html" class="mw-file-description"><img src="../File/Workbench_TechDraw.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../TechDraw_Workbench.html" title="TechDraw Workbench">TechDraw Workbench</a> &#1079;&#1072; &#1089;&#1098;&#1079;&#1076;&#1072;&#1074;&#1072;&#1085;&#1077; &#1085;&#1072; &#1090;&#1077;&#1093;&#1085;&#1080;&#1095;&#1077;&#1089;&#1082;&#1080; &#1095;&#1077;&#1088;&#1090;&#1077;&#1078;&#1080; &#1086;&#1090; 3D &#1084;&#1086;&#1076;&#1077;&#1083;&#1080;.</li></ul>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<ul><li><span typeof="mw:File"><a href="../index.php?title=Workbench_Test.svg&amp;filetimestamp=20200404174253&amp;.html" class="mw-file-description"><img src="../File/Workbench_Test.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> The <a href="../Testing.html" title="Testing">Test Framework Workbench</a> is for debugging FreeCAD. <code>D</code></li></ul>
-</div>
+<ul><li><span typeof="mw:File"><a href="../index.php?title=Workbench_Test.svg&amp;filetimestamp=20200404174253&amp;.html" class="mw-file-description"><img src="../File/Workbench_Test.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Testing.html" title="Testing">Test Framework Workbench</a> &#1077; &#1079;&#1072; &#1086;&#1090;&#1089;&#1090;&#1088;&#1072;&#1085;&#1103;&#1074;&#1072;&#1085;&#1077; &#1085;&#1072; &#1075;&#1088;&#1077;&#1096;&#1082;&#1080; &#1074;&#1098;&#1074; FreeCAD. <code>D</code></li></ul>
 <p><span id="Macros"></span>
 </p>
 <h3><span id=".D0.9C.D0.B0.D0.BA.D1.80.D0.BE.D1.81.D0.B8"></span><span class="mw-headline" id="&#1052;&#1072;&#1082;&#1088;&#1086;&#1089;&#1080;">&#1052;&#1072;&#1082;&#1088;&#1086;&#1089;&#1080;</span></h3>
@@ -168,13 +166,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260111191230
+Cached time: 20260111191320
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.143 seconds
-Real time usage: 0.265 seconds
-Preprocessor visited node count: 306/1000000
+CPU time usage: 0.111 seconds
+Real time usage: 0.182 seconds
+Preprocessor visited node count: 305/1000000
 Post&#8208;expand include size: 6635/2097152 bytes
 Template argument size: 2013/2097152 bytes
 Highest expansion depth: 5/100
@@ -184,17 +182,17 @@ Unstrip post&#8208;expand size: 4269/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   15.213      1 -total
- 37.37%    5.685      1 Template:Userdocnavi/bg
- 16.32%    2.482      1 Template:Navigation_menu_2
- 15.07%    2.292      1 Template:TOCright
- 13.17%    2.003      7 Template:Incode
-  9.89%    1.504      1 Template:Button
-  9.42%    1.433      3 Template:Version
-  8.40%    1.277      2 Template:VersionMinus
+100.00%   17.633      1 -total
+ 43.35%    7.644      1 Template:Userdocnavi/bg
+ 15.68%    2.764      1 Template:Navigation_menu_2
+ 14.19%    2.503      1 Template:TOCright
+ 10.43%    1.839      7 Template:Incode
+ 10.25%    1.808      3 Template:Version
+  8.69%    1.533      1 Template:Button
+  7.56%    1.333      2 Template:VersionMinus
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:77148-0!canonical and timestamp 20260111191229 and revision id 1735805. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:77148-0!canonical and timestamp 20260111191320 and revision id 1735809. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
