--- a/wiki/bg/User_hub.html
+++ b/wiki/bg/User_hub.html
@@ -96,12 +96,8 @@
 <h3><span id=".D0.9C.D0.B0.D0.BA.D1.80.D0.BE.D1.81.D0.B8"></span><span class="mw-headline" id="&#1052;&#1072;&#1082;&#1088;&#1086;&#1089;&#1080;">&#1052;&#1072;&#1082;&#1088;&#1086;&#1089;&#1080;</span></h3>
 <p>&#1052;&#1072;&#1082;&#1088;&#1086;&#1089;&#1080;&#1090;&#1077; (<a href="../Macros.html" title="Macros">Macros</a>)&#1089;&#1072; &#1089;&#1088;&#1072;&#1074;&#1085;&#1080;&#1090;&#1077;&#1083;&#1085;&#1086; &#1084;&#1072;&#1083;&#1082;&#1080; &#1092;&#1088;&#1072;&#1075;&#1084;&#1077;&#1085;&#1090;&#1080; &#1086;&#1090; &#1087;&#1088;&#1086;&#1075;&#1088;&#1072;&#1084;&#1077;&#1085; &#1082;&#1086;&#1076; &#1085;&#1072; &#1077;&#1079;&#1080;&#1082; <a href="../Python.html" title="Python">Python</a>, &#1082;&#1086;&#1080;&#1090;&#1086; &#1080;&#1079;&#1087;&#1098;&#1083;&#1085;&#1103;&#1074;&#1072;&#1090; &#1087;&#1088;&#1086;&#1089;&#1090;&#1072; &#1080;&#1083;&#1080; &#1089;&#1083;&#1086;&#1078;&#1085;&#1072; &#1079;&#1072;&#1076;&#1072;&#1095;&#1072;, &#1083;&#1080;&#1087;&#1089;&#1074;&#1072;&#1097;&#1072; &#1074; &#1073;&#1072;&#1079;&#1086;&#1074;&#1072;&#1090;&#1072; &#1080;&#1085;&#1089;&#1090;&#1072;&#1083;&#1072;&#1094;&#1080;&#1103; &#1085;&#1072; FreeCAD.
 </p><p>&#1053;&#1072;&#1087;&#1088;&#1077;&#1076;&#1085;&#1072;&#1083;&#1080; &#1087;&#1086;&#1090;&#1088;&#1077;&#1073;&#1080;&#1090;&#1077;&#1083;&#1080; &#1089;&#1072; &#1085;&#1072;&#1087;&#1080;&#1089;&#1072;&#1083;&#1080; &#1088;&#1072;&#1079;&#1083;&#1080;&#1095;&#1085;&#1080; &#1084;&#1072;&#1082;&#1088;&#1086;&#1089;&#1080; (<a href="../Macros.html" title="Macros">macros</a>), &#1079;&#1072; &#1076;&#1072; &#1076;&#1086;&#1087;&#1098;&#1083;&#1085;&#1103;&#1090; FreeCAD &#1089; &#1087;&#1086;&#1074;&#1077;&#1095;&#1077; &#1074;&#1098;&#1079;&#1084;&#1086;&#1078;&#1085;&#1086;&#1089;&#1090;&#1080;.
-</p>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<p>Since FreeCAD 0.17, many macros can be installed using the <a href="../Std_AddonMgr.html" title="Std AddonMgr">Addon Manager</a>. For a list of the macros refer to the <a href="../Macros_recipes.html" title="Macros recipes">Macros recipes</a> page. For manual installation see <a href="../How_to_install_macros.html" title="How to install macros">How to install macros</a>.
-</p>
-</div>
-<p><span id="External_workbenches"></span>
+</p><p>&#1054;&#1090; FreeCAD 0.17 &#1084;&#1085;&#1086;&#1075;&#1086; &#1084;&#1072;&#1082;&#1088;&#1086;&#1089;&#1080; &#1084;&#1086;&#1075;&#1072;&#1090; &#1076;&#1072; &#1073;&#1098;&#1076;&#1072;&#1090; &#1080;&#1085;&#1089;&#1090;&#1072;&#1083;&#1080;&#1088;&#1072;&#1085;&#1080; &#1089; &#1087;&#1086;&#1084;&#1086;&#1097;&#1090;&#1072; &#1085;&#1072; <a href="../Std_AddonMgr.html" title="Std AddonMgr">Addon Manager</a>. &#1047;&#1072; &#1089;&#1087;&#1080;&#1089;&#1098;&#1082; &#1085;&#1072; &#1084;&#1072;&#1082;&#1088;&#1086;&#1089;&#1080;&#1090;&#1077; &#1074;&#1080;&#1078;&#1090;&#1077; &#1089;&#1090;&#1088;&#1072;&#1085;&#1080;&#1094;&#1072;&#1090;&#1072; <a href="../Macros_recipes.html" title="Macros recipes">Macros Recipes</a>. &#1047;&#1072; &#1088;&#1098;&#1095;&#1085;&#1086; &#1080;&#1085;&#1089;&#1090;&#1072;&#1083;&#1080;&#1088;&#1072;&#1085;&#1077; &#1074;&#1080;&#1078;&#1090;&#1077; <a href="../How_to_install_macros.html" title="How to install macros">How to install macros</a>.
+</p><p><span id="External_workbenches"></span>
 </p>
 <div class="mw-translate-fuzzy">
 <h3><span id=".D0.92.D1.8A.D0.BD.D1.88.D0.BD.D0.B8_.D0.A0.D0.B0.D0.B1.D0.BE.D1.82.D0.BD.D0.B8_.D0.9F.D0.BB.D0.BE.D1.82.D0.BE.D0.B2.D0.B5"></span><span class="mw-headline" id="&#1042;&#1098;&#1085;&#1096;&#1085;&#1080;_&#1056;&#1072;&#1073;&#1086;&#1090;&#1085;&#1080;_&#1055;&#1083;&#1086;&#1090;&#1086;&#1074;&#1077;">&#1042;&#1098;&#1085;&#1096;&#1085;&#1080; &#1056;&#1072;&#1073;&#1086;&#1090;&#1085;&#1080; &#1055;&#1083;&#1086;&#1090;&#1086;&#1074;&#1077;</span></h3>
@@ -166,13 +162,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260111191320
+Cached time: 20260111191426
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.111 seconds
-Real time usage: 0.182 seconds
-Preprocessor visited node count: 305/1000000
+CPU time usage: 0.100 seconds
+Real time usage: 0.160 seconds
+Preprocessor visited node count: 304/1000000
 Post&#8208;expand include size: 6635/2097152 bytes
 Template argument size: 2013/2097152 bytes
 Highest expansion depth: 5/100
@@ -182,17 +178,17 @@ Unstrip post&#8208;expand size: 4269/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   17.633      1 -total
- 43.35%    7.644      1 Template:Userdocnavi/bg
- 15.68%    2.764      1 Template:Navigation_menu_2
- 14.19%    2.503      1 Template:TOCright
- 10.43%    1.839      7 Template:Incode
- 10.25%    1.808      3 Template:Version
-  8.69%    1.533      1 Template:Button
-  7.56%    1.333      2 Template:VersionMinus
+100.00%   11.975      1 -total
+ 44.50%    5.329      1 Template:Userdocnavi/bg
+ 17.54%    2.101      1 Template:Navigation_menu_2
+ 14.14%    1.693      2 Template:VersionMinus
+ 10.74%    1.286      7 Template:Incode
+  8.27%    0.991      3 Template:Version
+  8.27%    0.990      1 Template:TOCright
+  7.46%    0.893      1 Template:Button
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:77148-0!canonical and timestamp 20260111191320 and revision id 1735809. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:77148-0!canonical and timestamp 20260111191425 and revision id 1735813. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
