--- a/wiki/de/TechDraw_Workbench.html
+++ b/wiki/de/TechDraw_Workbench.html
@@ -159,9 +159,7 @@
 <ul><li><span typeof="mw:File"><a href="../index.php?title=TechDraw_ExtensionCreateVertChainDimension.svg&amp;filetimestamp=20240707202153&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ExtensionCreateVertChainDimension.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../de/TechDraw_ExtensionCreateVertChainDimension.html" title="TechDraw ExtensionCreateVertChainDimension/de">Vertikale Ma&szlig;kette</a>: Erstellt ein Abfolge vertikal fluchtender Ma&szlig;e.</li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=TechDraw_ExtensionCreateObliqueChainDimension.svg&amp;filetimestamp=20240707201902&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ExtensionCreateObliqueChainDimension.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../de/TechDraw_ExtensionCreateObliqueChainDimension.html" title="TechDraw ExtensionCreateObliqueChainDimension/de">Schr&auml;ge Ma&szlig;kette</a>: Erstellt ein Abfolge schr&auml;ger fluchtender Ma&szlig;e.</li></ul>
 <dl><dd><ul><li><span id="TechDraw_ExtensionCreateCoordDimensionGroup"> <span typeof="mw:File"><a href="../index.php?title=TechDraw_ExtensionCreateHorizCoordDimension.svg&amp;filetimestamp=20240707201729&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ExtensionCreateHorizCoordDimension.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../de/TechDraw_ExtensionCreateHorizCoordDimension.html" title="TechDraw ExtensionCreateHorizCoordDimension/de">Horizontale Koordinatenma&szlig;e</a>: Erstellt eine horizontale Stufenbema&szlig;ung, d.h. mehrere horizontale Ma&szlig;e, die untereinander den gleichen Abstand aufweisen und die von derselben Grundlinie starten.</span></li></ul></dd></dl>
-<div class="mw-translate-fuzzy">
-<dl><dd><ul><li><span typeof="mw:File"><a href="../index.php?title=TechDraw_ExtensionCreateVertCoordDimension.svg&amp;filetimestamp=20240707202244&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ExtensionCreateVertCoordDimension.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../de/TechDraw_ExtensionCreateVertCoordDimension.html" title="TechDraw ExtensionCreateVertCoordDimension/de">Vertikale Koordinatenma&szlig;e erstellen</a>: Erstellt eine vertikale Stufenbema&szlig;ung, d.h. mehrere vertikale Ma&szlig;e, die untereinander den gleichen Abstand aufweisen und die von derselben Grundlinie starten.</li></ul></dd></dl>
-</div>
+<dl><dd><ul><li><span typeof="mw:File"><a href="../index.php?title=TechDraw_ExtensionCreateVertCoordDimension.svg&amp;filetimestamp=20240707202244&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ExtensionCreateVertCoordDimension.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../de/TechDraw_ExtensionCreateVertCoordDimension.html" title="TechDraw ExtensionCreateVertCoordDimension/de">Vertikale Koordinatenma&szlig;e</a>: Erstellt eine vertikale Stufenbema&szlig;ung, d.h. mehrere vertikale Ma&szlig;e, die untereinander den gleichen Abstand aufweisen und die von derselben Grundlinie starten.</li></ul></dd></dl>
 <div class="mw-translate-fuzzy">
 <dl><dd><ul><li><span typeof="mw:File"><a href="../index.php?title=TechDraw_ExtensionCreateObliqueCoordDimension.svg&amp;filetimestamp=20240707202047&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ExtensionCreateObliqueCoordDimension.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../de/TechDraw_ExtensionCreateObliqueCoordDimension.html" title="TechDraw ExtensionCreateObliqueCoordDimension/de">Schr&auml;ge Stufenbema&szlig;ung</a>: Erstellt eine schr&auml;ge Stufenbema&szlig;ung, d.h. mehrere schr&auml;ge Ma&szlig;e, die untereinander den gleichen Abstand aufweisen und die von derselben Grundlinie starten.</li></ul></dd></dl>
 </div>
@@ -329,13 +327,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260111191415
+Cached time: 20260111191433
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.303 seconds
-Real time usage: 0.382 seconds
-Preprocessor visited node count: 877/1000000
+CPU time usage: 0.301 seconds
+Real time usage: 0.595 seconds
+Preprocessor visited node count: 876/1000000
 Post&#8208;expand include size: 27425/2097152 bytes
 Template argument size: 10242/2097152 bytes
 Highest expansion depth: 5/100
@@ -345,18 +343,18 @@ Unstrip post&#8208;expand size: 4458/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   28.097      1 -total
- 28.01%    7.871      1 Template:TechDraw_Tools_navi/de
- 16.74%    4.704      2 Template:Docnav/de
- 16.65%    4.677      2 Template:Navigation_menu_2
- 13.11%    3.684     25 Template:Version/de
- 10.24%    2.878      5 Template:VersionPlus/de
-  9.28%    2.607      1 Template:Userdocnavi/de
-  7.68%    2.158      1 Template:TOCright
-  5.85%    1.645      1 Template:KEY
+100.00%   32.959      1 -total
+ 28.34%    9.339      1 Template:TechDraw_Tools_navi/de
+ 18.50%    6.096      2 Template:Navigation_menu_2
+ 15.30%    5.041     25 Template:Version/de
+ 11.29%    3.720      2 Template:Docnav/de
+ 10.41%    3.431      1 Template:Userdocnavi/de
+  8.35%    2.751      1 Template:KEY
+  7.99%    2.632      5 Template:VersionPlus/de
+  6.01%    1.981      1 Template:TOCright
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:83899-0!canonical and timestamp 20260111191414 and revision id 1735811. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:83899-0!canonical and timestamp 20260111191432 and revision id 1735815. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
