--- a/wiki/bg/User_hub.html
+++ b/wiki/bg/User_hub.html
@@ -99,12 +99,7 @@
 </p><p>&#1054;&#1090; FreeCAD 0.17 &#1084;&#1085;&#1086;&#1075;&#1086; &#1084;&#1072;&#1082;&#1088;&#1086;&#1089;&#1080; &#1084;&#1086;&#1075;&#1072;&#1090; &#1076;&#1072; &#1073;&#1098;&#1076;&#1072;&#1090; &#1080;&#1085;&#1089;&#1090;&#1072;&#1083;&#1080;&#1088;&#1072;&#1085;&#1080; &#1089; &#1087;&#1086;&#1084;&#1086;&#1097;&#1090;&#1072; &#1085;&#1072; <a href="../Std_AddonMgr.html" title="Std AddonMgr">Addon Manager</a>. &#1047;&#1072; &#1089;&#1087;&#1080;&#1089;&#1098;&#1082; &#1085;&#1072; &#1084;&#1072;&#1082;&#1088;&#1086;&#1089;&#1080;&#1090;&#1077; &#1074;&#1080;&#1078;&#1090;&#1077; &#1089;&#1090;&#1088;&#1072;&#1085;&#1080;&#1094;&#1072;&#1090;&#1072; <a href="../Macros_recipes.html" title="Macros recipes">Macros Recipes</a>. &#1047;&#1072; &#1088;&#1098;&#1095;&#1085;&#1086; &#1080;&#1085;&#1089;&#1090;&#1072;&#1083;&#1080;&#1088;&#1072;&#1085;&#1077; &#1074;&#1080;&#1078;&#1090;&#1077; <a href="../How_to_install_macros.html" title="How to install macros">How to install macros</a>.
 </p><p><span id="External_workbenches"></span>
 </p>
-<div class="mw-translate-fuzzy">
-<h3><span id=".D0.92.D1.8A.D0.BD.D1.88.D0.BD.D0.B8_.D0.A0.D0.B0.D0.B1.D0.BE.D1.82.D0.BD.D0.B8_.D0.9F.D0.BB.D0.BE.D1.82.D0.BE.D0.B2.D0.B5"></span><span class="mw-headline" id="&#1042;&#1098;&#1085;&#1096;&#1085;&#1080;_&#1056;&#1072;&#1073;&#1086;&#1090;&#1085;&#1080;_&#1055;&#1083;&#1086;&#1090;&#1086;&#1074;&#1077;">&#1042;&#1098;&#1085;&#1096;&#1085;&#1080; &#1056;&#1072;&#1073;&#1086;&#1090;&#1085;&#1080; &#1055;&#1083;&#1086;&#1090;&#1086;&#1074;&#1077;</span></h3>
-<p>&#1053;&#1072;&#1087;&#1088;&#1077;&#1076;&#1085;&#1072;&#1083;&#1080; &#1087;&#1086;&#1090;&#1088;&#1077;&#1073;&#1080;&#1090;&#1077;&#1083;&#1080; &#1089;&#1072; &#1086;&#1073;&#1086;&#1075;&#1072;&#1090;&#1080;&#1083;&#1080; FreeCAD &#1089; &#1085;&#1086;&#1074;&#1080; &#1088;&#1072;&#1073;&#1086;&#1090;&#1085;&#1080; &#1087;&#1083;&#1086;&#1090;&#1086;&#1074;&#1077; &#1082;&#1086;&#1080;&#1090;&#1086; &#1074;&#1089;&#1077; &#1086;&#1097;&#1077; &#1085;&#1077; &#1089;&#1072; &#1074;&#1082;&#1083;&#1102;&#1095;&#1077;&#1085;&#1080; &#1074; &#1089;&#1072;&#1084;&#1080;&#1103; FreeCAD, &#1085;&#1086; &#1083;&#1077;&#1089;&#1085;&#1086; &#1089;&#1077; &#1076;&#1086;&#1073;&#1072;&#1074;&#1103;&#1090;. &#1047;&#1072; &#1086;&#1087;&#1080;&#1089;&#1072;&#1085;&#1080;&#1103; &#1085;&#1072; &#1076;&#1086;&#1089;&#1090;&#1098;&#1087;&#1085;&#1080;&#1090;&#1077; &#1074;&#1098;&#1085;&#1096;&#1085;&#1080; &#1088;&#1072;&#1073;&#1086;&#1090;&#1085;&#1080; &#1087;&#1083;&#1086;&#1090;&#1086;&#1074;&#1077; <a href="../External_workbenches.html" title="External workbenches">&#1074;&#1080;&#1078;&#1090;&#1077; &#1090;&#1091;&#1082;</a>.
-&#1047;&#1072; &#1080;&#1085;&#1089;&#1090;&#1088;&#1091;&#1082;&#1094;&#1080;&#1080; &#1079;&#1072; &#1080;&#1085;&#1089;&#1090;&#1072;&#1083;&#1072;&#1094;&#1080;&#1103; &#1085;&#1072; &#1090;&#1077;&#1079;&#1080; &#1076;&#1086;&#1087;&#1098;&#1083;&#1085;&#1080;&#1090;&#1077;&#1083;&#1085;&#1080; &#1088;&#1072;&#1073;&#1086;&#1090;&#1085;&#1080; &#1087;&#1083;&#1086;&#1090;&#1086;&#1074;&#1077; &#1074;&#1080;&#1078;&#1090;&#1077; <a href="../How_to_install_additional_workbenches.html" title="How to install additional workbenches">How to install additional workbenches</a>.
-</p>
-</div>
+<h3><span id=".D0.92.D1.8A.D0.BD.D1.88.D0.BD.D0.B8_.D1.80.D0.B0.D0.B1.D0.BE.D1.82.D0.BD.D0.B8_.D0.BC.D0.B0.D1.81.D0.B8"></span><span class="mw-headline" id="&#1042;&#1098;&#1085;&#1096;&#1085;&#1080;_&#1088;&#1072;&#1073;&#1086;&#1090;&#1085;&#1080;_&#1084;&#1072;&#1089;&#1080;">&#1042;&#1098;&#1085;&#1096;&#1085;&#1080; &#1088;&#1072;&#1073;&#1086;&#1090;&#1085;&#1080; &#1084;&#1072;&#1089;&#1080;</span></h3>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <p>When many macros or functions are developed together, and are organized in toolbars and menus, they can become a new workbench.
 </p>
@@ -162,13 +157,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260111191426
+Cached time: 20260111191500
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.100 seconds
-Real time usage: 0.160 seconds
-Preprocessor visited node count: 304/1000000
+CPU time usage: 0.145 seconds
+Real time usage: 0.245 seconds
+Preprocessor visited node count: 301/1000000
 Post&#8208;expand include size: 6635/2097152 bytes
 Template argument size: 2013/2097152 bytes
 Highest expansion depth: 5/100
@@ -178,17 +173,17 @@ Unstrip post&#8208;expand size: 4269/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   11.975      1 -total
- 44.50%    5.329      1 Template:Userdocnavi/bg
- 17.54%    2.101      1 Template:Navigation_menu_2
- 14.14%    1.693      2 Template:VersionMinus
- 10.74%    1.286      7 Template:Incode
-  8.27%    0.991      3 Template:Version
-  8.27%    0.990      1 Template:TOCright
-  7.46%    0.893      1 Template:Button
+100.00%   17.125      1 -total
+ 46.94%    8.038      1 Template:Userdocnavi/bg
+ 16.68%    2.856      1 Template:Navigation_menu_2
+ 13.71%    2.348      7 Template:Incode
+ 10.46%    1.791      1 Template:TOCright
+  8.27%    1.416      3 Template:Version
+  7.37%    1.262      2 Template:VersionMinus
+  7.05%    1.207      1 Template:Button
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:77148-0!canonical and timestamp 20260111191425 and revision id 1735813. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:77148-0!canonical and timestamp 20260111191500 and revision id 1735817. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
